--- a/index.html
+++ b/index.html
@@ -41,33 +41,45 @@
     label {
       font-weight: bold;
     }
+
+    /* title glow */
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 28px;
+      text-shadow: 0 0 8px rgba(255,255,255,0.6);
+    }
   </style>
 </head>
 
 <body>
 
-  <form name="caeserForm" id="ceaserForm">
-    <label for="userMessage">Enter Message:</label><br />
-    <textarea id="userMessage" oninput="enDeCode()"></textarea>
+  <div>
+    <h1>Caesar Cipher</h1>
 
-    <br/><br/>
+    <form name="caeserForm" id="ceaserForm">
+      <label for="userMessage">Enter Message:</label><br />
+      <textarea id="userMessage" oninput="enDeCode()"></textarea>
 
-    <label for="encode">Encode:</label>
-    <input type="radio" name="code" id="encode" checked onchange="enDeCode()" />
+      <br/><br/>
 
-    <label for="decode">Decode:</label>
-    <input type="radio" name="code" id="decode" onchange="enDeCode()" />
+      <label for="encode">Encode:</label>
+      <input type="radio" name="code" id="encode" checked onchange="enDeCode()" />
 
-    <br/><br/>
+      <label for="decode">Decode:</label>
+      <input type="radio" name="code" id="decode" onchange="enDeCode()" />
 
-    <label for="userKey">Key:</label>
-    <input type="number" min="0" max="26" id="userKey" value="1" onchange="enDeCode()" />
+      <br/><br/>
 
-    <br/><br/>
+      <label for="userKey">Key:</label>
+      <input type="number" min="0" max="26" id="userKey" value="1" onchange="enDeCode()" />
 
-    <label for="output">Output:</label><br />
-    <textarea id="output"></textarea>
-  </form>
+      <br/><br/>
+
+      <label for="output">Output:</label><br />
+      <textarea id="output"></textarea>
+    </form>
+  </div>
 
   <script>
     function enDeCode(){
@@ -101,28 +113,4 @@
       if (encode) { 
         index = index + Number(userKey); 
       } else {
-        index = index - Number(userKey);
-      }  
-
-      if (index > 25){
-        index = index - 26;
-      } else if (index < 0) {
-        index = index + 26;
-      }
-      return index;
-    }
-
-    function codeLetter(letter, userKey, flag){
-      let letterRegEx = /[^a-z]/;
-      
-      if (letterRegEx.test(letter)){
-        return letter;
-      } else {
-        let newIndex = calculateNewIndex(letter, userKey, flag);
-        return convertIndexToLetter(newIndex);
-      }
-    }
-  </script>
-
-</body>
-</html>
+        index = index - Number(userKey
